feat: land 2026-03-14 durability, realtime, and pipeline resilience upgrades